Partial cleanup in war-util and classloaders
- generics, stringbuffers, formatting, deprecated methods
- bit of optimization
- debug removed (unused)
- delegate is true by default, synced
- logic around isDelegateFirstResource simplified (probably will be revisited
  for Faces TCK)