@@ -18,11 +18,11 @@
 package com.sun.enterprise.loader;
 
 import com.sun.appserv.server.util.PreprocessorUtil;
-import com.sun.enterprise.util.CULoggerInfo;
-import com.sun.enterprise.util.i18n.StringManager;
 import com.sun.enterprise.security.integration.DDPermissionsLoader;
 import com.sun.enterprise.security.integration.PermsHolder;
-import org.glassfish.api.deployment.DeploymentContext;
+import com.sun.enterprise.util.CULoggerInfo;
+import com.sun.enterprise.util.i18n.StringManager;
+
 import java.io.BufferedInputStream;
 import java.io.ByteArrayOutputStream;
 import java.io.File;
@@ -42,15 +42,25 @@ import java.net.URLConnection;
 import java.net.URLStreamHandler;
 import java.security.AccessController;
 import java.security.CodeSource;
-import java.security.Permission;
+import java.security.PermissionCollection;
 import java.security.PrivilegedAction;
 import java.security.PrivilegedActionException;
 import java.security.PrivilegedExceptionAction;
 import java.security.ProtectionDomain;
 import java.security.SecureClassLoader;
 import java.security.cert.Certificate;
-import java.security.Permissions;
-import java.util.*;
+import java.time.Instant;
+import java.util.ArrayList;
+import java.util.Arrays;
+import java.util.Collections;
+import java.util.Enumeration;
+import java.util.Hashtable;
+import java.util.LinkedHashSet;
+import java.util.List;
+import java.util.Map;
+import java.util.Set;
+import java.util.StringTokenizer;
+import java.util.Vector;
 import java.util.concurrent.ConcurrentHashMap;
 import java.util.jar.Attributes;
 import java.util.jar.JarEntry;
@@ -59,96 +69,84 @@ import java.util.jar.Manifest;
 import java.util.logging.Level;
 import java.util.logging.Logger;
 import java.util.zip.ZipEntry;
-import java.security.PermissionCollection;
+
 import org.glassfish.api.deployment.InstrumentableClassLoader;
 import org.glassfish.hk2.api.PreDestroy;
+
+import static java.util.logging.Level.INFO;
 
 /**
  * Class loader used by the ejbs of an application or stand alone module.
  *
  * This class loader also keeps cache of not found classes and resources.
- * </xmp>
  *
  * @author Nazrul Islam
  * @author Kenneth Saks
  * @author Sivakumar Thyagarajan
  * @since  JDK 1.4
  */
-public class ASURLClassLoader
-        extends URLClassLoader
-        implements JasperAdapter, InstrumentableClassLoader, PreDestroy, DDPermissionsLoader {
-
-    /*
-       NOTE: various variables are 'final' to enjoy the JVM thread visibility guaranteed for 'final'.
-       These variables cannot be nulled out because of this, but the contents are cleared (for Map/Vector).
-       This is actually a hidden benefit, because there are places in the code where these variables
-       are being used but they could be nulled out while being used.
-       Another benefit is that there is no synchronization needed to get the Map/Vector/List itself.
-    */
+public class ASURLClassLoader extends URLClassLoader
+    implements JasperAdapter, InstrumentableClassLoader, PreDestroy, DDPermissionsLoader {
 
     /** logger for this class */
     private static final Logger _logger=CULoggerInfo.getLogger();
 
-    /*
-       list of url entries of this class loader. Using LinkedHashSet instead of original ArrayList
-       for faster search.
-    */
+    /**
+     * list of url entries of this class loader. Using LinkedHashSet instead of original ArrayList
+     * for faster search.
+     */
     private final Set<URLEntry> urlSet = Collections.synchronizedSet(new LinkedHashSet<URLEntry>());
 
     /** cache of not found resources */
-    private final Map<String,String> notFoundResources   = new ConcurrentHashMap<String,String>();
+    private final Map<String, String> notFoundResources = new ConcurrentHashMap<>();
 
     /** cache of not found classes */
-    private final Map<String,String> notFoundClasses     = new ConcurrentHashMap<String,String>();
+    private final Map<String, String> notFoundClasses = new ConcurrentHashMap<>();
 
     /**
-        State flag to track whether this instance has been shut off.
-
-        Note: 'volatile' *does not by itself eliminate a race condition* similar to null-check idiom bug.
-    */
-    private volatile boolean doneCalled = false;
+     * State flag to track whether this instance has been shut off.
+     * Note: 'volatile' *does not by itself eliminate a race condition* similar
+     * to null-check idiom bug.
+     */
+    private volatile boolean doneCalled;
 
     /**
-        snapshot of classloader state at the time done was called.
-        <p>
-        Must be 'volatile'; not all access is within 'synchronized' eg it is used in toString().
-    */
+     * snapshot of classloader state at the time done was called.
+     * <p>
+     * Must be 'volatile'; not all access is within 'synchronized' eg it is used in toString().
+     */
     private volatile String doneSnapshot;
 
     /** streams opened by this loader */
-    private final Vector<SentinelInputStream> streams = new Vector<SentinelInputStream>();
+    private final Vector<SentinelInputStream> streams = new Vector<>();
 
-    private final ArrayList<ClassFileTransformer> transformers = new ArrayList<ClassFileTransformer>(1);
+    private final ArrayList<ClassFileTransformer> transformers = new ArrayList<>(1);
 
-    private final static StringManager sm =
-        StringManager.getManager(ASURLClassLoader.class);
+    private final static StringManager sm = StringManager.getManager(ASURLClassLoader.class);
 
     //holder for declared and ee permissions
-    private PermsHolder permissionsHolder;
+    private final PermsHolder permissionsHolder;
 
     /**
      * Constructor.
      */
     public ASURLClassLoader() {
         super(new URL[0]);
-
         permissionsHolder = new PermsHolder();
-
-        if (_logger.isLoggable(Level.FINE)) {
-            _logger.log(Level.FINE,
-                        "ClassLoader: " + this + " is getting created.");
-        }
+        _logger.log(Level.FINE, "ClassLoader: {0} is getting created.", this);
     }
+
 
     /**
      * Constructor.
      *
-     * @param    parent    parent class loader
+     * @param parent parent class loader
      */
     public ASURLClassLoader(ClassLoader parent) {
         super(new URL[0], parent);
         permissionsHolder = new PermsHolder();
     }
+
 
     public boolean isDone() {
         // method need not by 'synchronized' because 'doneCalled' is 'volatile'.
@@ -165,33 +163,34 @@ public class ASURLClassLoader
     /**
      * This method should be called to free up the resources.
      * It helps garbage collection.
-     *
      * Must be synchronized for:
-         (a) visibility of variables
-         (b) race condition while checking 'doneCalled'
-         (c) only one caller should close the zip files,
-         (d) done should occur only once and set the flag when done.
-         (e) shoudl not return 'true' when a previous thread might still
-         be in the process of executing the method.
+     * <ol>
+     * <li>visibility of variables
+     * <li>race condition while checking 'doneCalled'
+     * <li>only one caller should close the zip files,
+     * <li>done should occur only once and set the flag when done.
+     * <li>shoudl not return 'true' when a previous thread might still
+     * be in the process of executing the method.
+     * </ol>
      */
     public void done() {
         // This works because 'doneCalled' is 'volatile'
-        if( doneCalled ) {
+        if (doneCalled) {
             return;
         }
 
         // the above optimized check for 'doneCalled=true' is a race condition.
         // The lock must now be acquired, and 'doneCalled' rechecked.
-        synchronized(this) {
-            if( doneCalled ) {
+        synchronized (this) {
+            if (doneCalled) {
                 return;
             }
 
             // Capture the fact that the classloader is now effectively disabled.
             // First create a snapshot of our state.  This should be called
             // before setting doneCalled = true.
-            doneSnapshot = "ASURLClassLoader.done() called ON " + this.toString()
-                + "\n AT " + new Date() +
+            doneSnapshot = "ASURLClassLoader.done() called ON " + this
+                + "\n AT " + Instant.now() +
                 " \n BY :" + Arrays.toString(Thread.currentThread().getStackTrace());
 
             // Presumably OK to set this flag now while the rest of the cleanup proceeeds,
@@ -204,9 +203,7 @@ public class ASURLClassLoader
                     try {
                         u.zip.reallyClose();
                     } catch (IOException ioe) {
-                        _logger.log(Level.INFO,
-                                CULoggerInfo.getString(CULoggerInfo.exceptionClosingURLEntry, u.source),
-                                ioe);
+                        _logger.log(INFO, CULoggerInfo.getString(CULoggerInfo.exceptionClosingURLEntry, u.source), ioe);
                     }
                 }
                 if (u.table != null) {
@@ -219,10 +216,14 @@ public class ASURLClassLoader
             closeOpenStreams();
 
             // clears out the tables
-            // Clear all values.  Because fields are 'final' (for thread safety), cannot null them
+            // Clear all values. Because fields are 'final' (for thread safety), cannot null them
             this.urlSet.clear();
-            if (this.notFoundResources != null) { this.notFoundResources.clear(); }
-            if (this.notFoundClasses != null)   { this.notFoundClasses.clear();   }
+            if (this.notFoundResources != null) {
+                this.notFoundResources.clear();
+            }
+            if (this.notFoundClasses != null) {
+                this.notFoundClasses.clear();
+            }
         }
     }
 
@@ -232,6 +233,7 @@ public class ASURLClassLoader
      * <p>
      * This variant of the method makes sure that the URL is valid, in particular
      * encoding special characters (such as blanks) in the file path.
+     *
      * @param file the File to use in creating the URL
      * @throws IOException in case of errors converting the file to a URL
      */
@@ -239,9 +241,7 @@ public class ASURLClassLoader
         try {
             appendURL(file.toURI().toURL());
         } catch (MalformedURLException mue) {
-            _logger.log(Level.SEVERE,
-                    CULoggerInfo.getString(CULoggerInfo.badUrlEntry, file.toURI()),
-                    mue);
+            _logger.log(Level.SEVERE, CULoggerInfo.getString(CULoggerInfo.badUrlEntry, file.toURI()), mue);
 
             IOException ioe = new IOException();
             ioe.initCause(mue);
@@ -256,6 +256,7 @@ public class ASURLClassLoader
      *
      * @param url the URL to be added to the search path of URLs
      */
+    @Override
     public void addURL(URL url) {
         appendURL(url);
     }
@@ -264,79 +265,65 @@ public class ASURLClassLoader
     /**
      * Add a url to the list of urls we search for a class's bytecodes.
      *
-     * @param    url    url to be added
+     * @param url url to be added
      */
     public synchronized void appendURL(URL url) {
-
         try {
             if (url == null) {
-                _logger.log(Level.INFO, CULoggerInfo.missingURLEntry);
+                _logger.log(INFO, CULoggerInfo.missingURLEntry);
                 return;
             }
 
             URLEntry entry = new URLEntry(url);
 
-            if ( !urlSet.contains(entry) ) {
+            if (!urlSet.contains(entry)) {
                 // adds the url entry to the list
                 this.urlSet.add(entry);
-
                 if (entry.isJar) {
                     // checks the manifest if a jar
                     checkManifest(entry.zip, entry.file);
                 }
             } else {
-                _logger.log(Level.FINE,
-                    "[ASURLClassLoader] Ignoring duplicate URL: " + url);
-                /*
-                 *Clean up the unused entry or it could hold open a jar file.
-                 */
+                _logger.log(Level.FINE, "[ASURLClassLoader] Ignoring duplicate URL: " + url);
+                // Clean up the unused entry or it could hold open a jar file.
                 if (entry.zip != null) {
                     try {
                         entry.zip.reallyClose();
                     } catch (IOException ioe) {
-                        _logger.log(Level.INFO,
-                                CULoggerInfo.getString(CULoggerInfo.exceptionClosingDupUrlEntry, url),
-                                ioe);
+                        _logger.log(INFO, CULoggerInfo.getString(CULoggerInfo.exceptionClosingDupUrlEntry, url), ioe);
                     }
                 }
             }
 
             // clears the "not found" cache since we are adding a new url
             clearNotFoundCaches();
-
         } catch (IOException ioe) {
-
-            _logger.log(Level.SEVERE,
-                    CULoggerInfo.getString(CULoggerInfo.badUrlEntry, url),
-                    ioe);
+            _logger.log(Level.SEVERE, CULoggerInfo.getString(CULoggerInfo.badUrlEntry, url), ioe);
         }
     }
 
+
     /**
      * Returns the urls of this class loader.
-     *
-     * Method is 'synchronized' to avoid the  thread-unsafe null-check idiom idiom, also
+     * Method is 'synchronized' to avoid the thread-unsafe null-check idiom idiom, also
      * protects the caller from simultaneous changes while iterating,
-     * by returning a URL[] (copy) rather than the original.  Also protects against
+     * by returning a URL[] (copy) rather than the original. Also protects against
      * changes to 'urlSet' while iterating over it.
      *
-     * @return    the urls of this class loader or an empty array
+     * @return the urls of this class loader or an empty array
      */
+    @Override
     public synchronized URL[] getURLs() {
-
-        URL[] url  = null;
-
-        int i=0;
+        final URL[] url;
         if (this.urlSet != null) {
-            url  = new URL[this.urlSet.size()];
-
+            url = new URL[this.urlSet.size()];
+            int i = 0;
             for (URLEntry urlEntry : urlSet) {
                 url[i++] = (urlEntry).source;
             }
         } else {
             url = new URL[0];
         }
-
         return url;
     }
 
@@ -352,15 +339,13 @@ public class ASURLClassLoader
      * of this ASURLClassLoader
      */
     public String getClasspath() {
-
-        StringBuffer strBuf = null;
-
+        StringBuilder strBuf = null;
         URL[] urls = getURLs();
         if (urls != null) {
-            for (int i=0; i<urls.length; i++) {
+            for (int i = 0; i < urls.length; i++) {
                 if (urls[i].getProtocol().equals("file")) {
                     if (strBuf == null) {
-                        strBuf = new StringBuffer();
+                        strBuf = new StringBuilder();
                     }
                     if (i > 0) {
                         strBuf.append(File.pathSeparator);
@@ -369,127 +354,116 @@ public class ASURLClassLoader
                 }
             }
         }
-
-        return (strBuf != null) ? strBuf.toString() : null;
+        return strBuf == null ? null : strBuf.toString();
     }
 
+
     /**
-     *Refreshes the memory of the class loader.  This involves clearing the
-     *not-found cahces and recreating the hash tables for the URLEntries that
-     *record the files accessible for each.
-     *<p>
-     *Code that creates an ASURLClassLoader and then adds files to a directory
-     *that is in the loader's classpath should invoke this method after the new
-     *file(s) have been added in order to update the class loader's data
-     *structures which optimize class and resource searches.
-     *@throws IOException in case of errors refreshing the cache
+     * Refreshes the memory of the class loader. This involves clearing the
+     * not-found cahces and recreating the hash tables for the URLEntries that
+     * record the files accessible for each.
+     * <p>
+     * Code that creates an ASURLClassLoader and then adds files to a directory
+     * that is in the loader's classpath should invoke this method after the new
+     * file(s) have been added in order to update the class loader's data
+     * structures which optimize class and resource searches.
+     *
+     * @throws IOException in case of errors refreshing the cache
      */
     public synchronized void refresh() throws IOException {
         clearNotFoundCaches();
-//        for (URLEntry entry : urlSet) {
-//            entry.cacheItems();
-//        }
     }
 
+
+    @Override
     public void addTransformer(ClassFileTransformer transformer) {
         transformers.add(transformer);
     }
 
-    /**
-     * Create a new instance of a sibling classloader
-     * @return a new instance of a class loader that has the same visibility
-     *  as this class loader
-     */
-    public ClassLoader copy() {
-        final ASURLClassLoader copyFrom = this;
-        DelegatingClassLoader newCl = (DelegatingClassLoader)AccessController.doPrivileged(new PrivilegedAction() {
-            public Object run() {
-                // privileged code goes here, for example:
-                return new DelegatingClassLoader(copyFrom);
-            }
-        });
-        return newCl;
-    }
 
     /**
-     *Erases the memory of classes and resources that have been searched for
-     *but not found.
+     * Create a new instance of a sibling classloader
+     *
+     * @return a new instance of a class loader that has the same visibility
+     *         as this class loader
      */
-     private void clearNotFoundCaches() {
+    @Override
+    public ClassLoader copy() {
+        final ASURLClassLoader copyFrom = this;
+        PrivilegedAction<DelegatingClassLoader> privilegedAction = () -> new DelegatingClassLoader(copyFrom);
+        return AccessController.doPrivileged(privilegedAction);
+    }
+
+
+    /**
+     * Erases the memory of classes and resources that have been searched for
+     * but not found.
+     */
+    private void clearNotFoundCaches() {
         this.notFoundResources.clear();
         this.notFoundClasses.clear();
     }
 
+
     /**
      * Internal implementation of find resource.
      *
-     * @param    res    url resource entry
-     * @param    name   name of the resource
+     * @param res url resource entry
+     * @param name name of the resource
      */
-    private URL findResource0(final URLEntry res,
-                              final String name) {
+    private URL findResource0(final URLEntry res, final String name) {
+        PrivilegedAction<URL> action = () -> {
 
-        Object result =
-        AccessController.doPrivileged(new PrivilegedAction() {
-            public Object run() {
-
-                if (res.isJar) {
-
-                    try {
-                        JarEntry jarEntry = res.zip.getJarEntry(name);
-                        if (jarEntry != null) {
-                            /*
-                             *Use a custom URL with a special stream handler to
-                             *prevent the JDK's JarURLConnection caching from
-                             *locking the jar file until JVM exit.
-                             */
-                            InternalURLStreamHandler handler = new InternalURLStreamHandler(res, name);
-
-                            // Create a new sub URL from the resource URL (i.e. res.source). To avoid double encoding
-                            // (see https://glassfish.dev.java.net/issues/show_bug.cgi?id=13045)
-                            // use URL constructor instead of first creating a URI and then calling toURL().
-                            // If the resource URL is not properly encoded, that's not our problem.
-                            // Whoever has supplied the resource URL is at fault.
-                            URL ret = new URL("jar", null /* host */, -1 /* port */, res.source + "!/" + name, handler);
-                            handler.tieUrl(ret);
-                            return ret;
-                        }
-
-                    } catch (Throwable thr) {
-                        _logger.log(Level.INFO, CULoggerInfo.exceptionInASURLClassLoader, thr);
+            if (res.isJar) {
+                try {
+                    JarEntry jarEntry = res.zip.getJarEntry(name);
+                    if (jarEntry == null) {
+                        return null;
                     }
-                } else { // directory
-                    try {
-                        File resourceFile =
-                            new File(res.file.getCanonicalPath()
-                                        + File.separator + name);
+                    // Use a custom URL with a special stream handler to
+                    // prevent the JDK's JarURLConnection caching from
+                    // locking the jar file until JVM exit.
+                    InternalURLStreamHandler handler = new InternalURLStreamHandler(res, name);
 
-                        if (resourceFile.exists()) {
-                            // If we make it this far,
-                            // the resource is in the directory.
-                            return  resourceFile.toURL();
-                        }
-
-                    } catch (IOException e) {
-                        _logger.log(Level.INFO, CULoggerInfo.exceptionInASURLClassLoader, e);
-                    }
+                    // Create a new sub URL from the resource URL (i.e. res.source). To avoid
+                    // double encoding
+                    // (see https://glassfish.dev.java.net/issues/show_bug.cgi?id=13045)
+                    // use URL constructor instead of first creating a URI and then calling
+                    // toURL().
+                    // If the resource URL is not properly encoded, that's not our problem.
+                    // Whoever has supplied the resource URL is at fault.
+                    URL ret = new URL("jar", null /* host */, -1 /* port */, res.source + "!/" + name, handler);
+                    handler.tieUrl(ret);
+                    return ret;
+                } catch (Throwable thr) {
+                    _logger.log(INFO, CULoggerInfo.exceptionInASURLClassLoader, thr);
                 }
+            } else { // directory
+                try {
+                    File resourceFile = new File(res.file, name);
+                    if (resourceFile.exists()) {
+                        // If we make it this far,
+                        // the resource is in the directory.
+                        return resourceFile.toURI().toURL();
+                    }
+                } catch (IOException e) {
+                    _logger.log(INFO, CULoggerInfo.exceptionInASURLClassLoader, e);
+                }
+            }
 
-                return null;
+            return null;
 
-            } // End for -- each URL in classpath.
-        });
-
-        return (URL) result;
+        };
+        return AccessController.doPrivileged(action);
     }
 
-    public URL findResource(String name) {
 
+    @Override
+    public URL findResource(String name) {
         // quick quick that relies on 'doneCalled' being 'volatile'
-        if( doneCalled ) {
-            _logger.log(Level.WARNING,
-                    CULoggerInfo.getString(CULoggerInfo.findResourceAfterDone, name, this.toString()),
-                    new Throwable());
+        if (doneCalled) {
+            _logger.log(Level.WARNING, CULoggerInfo.getString(CULoggerInfo.findResourceAfterDone, name, this),
+                new Throwable());
             return null;
         }
 
@@ -503,7 +477,7 @@ public class ASURLClassLoader
         // excpetion for 'urlSet', should the set be cleared while looping.
 
         // resource is in the not found list
-        String nf = (String) notFoundResources.get(name);
+        String nf = notFoundResources.get(name);
         if (nf != null && nf.equals(name) ) {
             return null;
         }
@@ -516,85 +490,84 @@ public class ASURLClassLoader
                 }
 
                 final URL url = findResource0(u, name);
-                if (url != null) return url;
+                if (url != null) {
+                    return url;
+                }
             }
         }
 
         // add resource to the not found list
         notFoundResources.put(name, name);
-
         return null;
     }
+
 
     /**
      * Returns an enumeration of java.net.URL objects
      * representing all the resources with the given name.
-     *
-     * This method is synchronized to avoid (a) race condition checking 'doneCalled',
-     * (b) changes to contents or length of 'resourcesList' and/or 'notFoundResources' while iterating
-     * over them, (c) thread visibility to all of the above.
+     * This method is synchronized to avoid
+     * <ol>
+     * <li>race condition checking 'doneCalled',
+     * <li>changes to contents or length of 'resourcesList' and/or 'notFoundResources' while
+     * iterating over them,
+     * <li>thread visibility to all of the above.
+     * </ol>
      */
-    public synchronized Enumeration<URL>
-    findResources(String name) throws IOException {
-        if( doneCalled ) {
-            _logger.log(Level.WARNING, CULoggerInfo.doneAlreadyCalled,
-                        new Object[] { name, doneSnapshot });
-            // return an empty enumeration instead of null. See issue #13096
-            return Collections.enumeration(Collections.EMPTY_LIST);
+    @Override
+    public synchronized Enumeration<URL> findResources(String name) throws IOException {
+        if (doneCalled) {
+            _logger.log(Level.WARNING, CULoggerInfo.doneAlreadyCalled, new Object[] {name, doneSnapshot});
+            return Collections.emptyEnumeration();
         }
-        List<URL> resourcesList = new ArrayList<URL>();
-
+        List<URL> resourcesList = new ArrayList<>();
         // resource is in the not found list
-        final String nf = (String) notFoundResources.get(name);
+        final String nf = notFoundResources.get(name);
         if (nf != null && nf.equals(name) ) {
-            return (new Vector(resourcesList)).elements();
+            return Collections.emptyEnumeration();
         }
 
-        for (Iterator<URLEntry> iter = this.urlSet.iterator(); iter.hasNext();) {
-            final URLEntry urlEntry = iter.next();
+        for (URLEntry urlEntry : this.urlSet) {
             final URL url = findResource0(urlEntry, name);
             if (url != null) {
                 resourcesList.add(url);
             }
         }
 
-        if (resourcesList.size() == 0) {
+        if (resourcesList.isEmpty()) {
             // add resource to the not found list
             notFoundResources.put(name, name);
         }
-
-        return (new Vector(resourcesList)).elements();
+        return Collections.enumeration(resourcesList);
     }
-
 
 
     /**
      * Checks the manifest of the given jar file.
      *
-     * @param    jar    the jar file that may contain manifest class path
-     * @param    file   file pointer to the jar
-     *
-     * @throws   IOException   if an i/o error
+     * @param jar the jar file that may contain manifest class path
+     * @param file file pointer to the jar
+     * @throws IOException if an i/o error
      */
     private void checkManifest(JarFile jar, File file) throws IOException {
-
-        if ( (jar == null) || (file == null) ) return;
+        if (jar == null || file == null) {
+            return;
+        }
 
         Manifest man = jar.getManifest();
-        if (man == null) return;
+        if (man == null) {
+            return;
+        }
 
         synchronized (this) {
-            String cp = man.getMainAttributes().getValue(
-                                        Attributes.Name.CLASS_PATH);
-            if (cp == null) return;
+            String cp = man.getMainAttributes().getValue(Attributes.Name.CLASS_PATH);
+            if (cp == null) {
+                return;
+            }
 
             StringTokenizer st = new StringTokenizer(cp, " ");
-
             while (st.hasMoreTokens()) {
                 final String entry = st.nextToken();
-
                 final File newFile = new File(file.getParentFile(), entry);
-
                 // add to class path of this class loader
                 try {
                     appendURL(newFile);
@@ -605,112 +578,101 @@ public class ASURLClassLoader
         }
     }
 
+
     /**
      * Internal implementation of load class.
      *
-     * @param    res        url resource entry
-     * @param    entryName  name of the class
+     * @param res url resource entry
+     * @param entryName name of the class
      */
     private byte[] loadClassData0(final URLEntry res, final String entryName) {
+        PrivilegedAction<byte[]> action = () -> {
+            InputStream classStream = null;
+            try {
+                if (res.isJar) { // It is a jarfile..
+                    JarFile zip = res.zip;
+                    JarEntry entry = zip.getJarEntry(entryName);
+                    if (entry != null) {
+                        classStream = zip.getInputStream(entry);
+                        byte[] classData1 = getClassData(classStream);
+                        res.setProtectionDomain(ASURLClassLoader.this, entry.getCertificates());
+                        return classData1;
+                    }
+                } else { // Its a directory....
+                    File classFile = new File (res.file,
+                                entryName.replace('/', File.separatorChar));
 
-        Object result =
-        AccessController.doPrivileged(new PrivilegedAction() {
-            public Object run() {
-                InputStream classStream = null;
-                try {
-
-                    if (res.isJar) { // It is a jarfile..
-                        JarFile zip = res.zip;
-                        JarEntry entry = zip.getJarEntry(entryName);
-                        if (entry != null) {
-                            classStream = zip.getInputStream(entry);
-                            byte[] classData = getClassData(classStream);
-                            res.setProtectionDomain(ASURLClassLoader.this, entry.getCertificates());
-                            return classData;
-                        }
-                    } else { // Its a directory....
-                        File classFile = new File (res.file,
-                                    entryName.replace('/', File.separatorChar));
-
-                        if (classFile.exists()) {
-                            try {
-                                classStream = new FileInputStream(classFile);
-                                byte[] classData = getClassData(classStream);
-                                res.setProtectionDomain(ASURLClassLoader.this, null);
-                                return classData;
-                            } finally {
-                                /*
-                                 *Close the stream only if this is a directory.  The stream for
-                                 *a jar/zip file was opened elsewhere and should remain open after this
-                                 *method completes.
-                                 */
-                                if (classStream != null) {
-                                    try {
-                                        classStream.close();
-                                    } catch (IOException closeIOE) {
-                                        _logger.log(Level.INFO, "loader.excep_in_asurlclassloader", closeIOE);
-                                    }
+                    if (classFile.exists()) {
+                        try {
+                            classStream = new FileInputStream(classFile);
+                            byte[] classData2 = getClassData(classStream);
+                            res.setProtectionDomain(ASURLClassLoader.this, null);
+                            return classData2;
+                        } finally {
+                            /*
+                             *Close the stream only if this is a directory.  The stream for
+                             *a jar/zip file was opened elsewhere and should remain open after this
+                             *method completes.
+                             */
+                            if (classStream != null) {
+                                try {
+                                    classStream.close();
+                                } catch (IOException closeIOE) {
+                                    _logger.log(INFO, "loader.excep_in_asurlclassloader", closeIOE);
                                 }
                             }
                         }
                     }
-                } catch (IOException ioe) {
-                    _logger.log(Level.INFO, CULoggerInfo.exceptionInASURLClassLoader, ioe);
                 }
-                return null;
+            } catch (IOException ioe) {
+                _logger.log(INFO, CULoggerInfo.exceptionInASURLClassLoader, ioe);
             }
-        });
-        return (byte[]) result;
+            return null;
+        };
+        return AccessController.doPrivileged(action);
     }
 
+
     @Override
-    public void addEEPermissions(PermissionCollection eePc)
-        throws SecurityException {
+    public void addEEPermissions(PermissionCollection eePc) throws SecurityException {
         // sm on
         if (System.getSecurityManager() != null) {
-            System.getSecurityManager().checkSecurityAccess(
-                    DDPermissionsLoader.SET_EE_POLICY);
+            System.getSecurityManager().checkSecurityAccess(DDPermissionsLoader.SET_EE_POLICY);
 
             permissionsHolder.setEEPermissions(eePc);
         }
     }
 
+
     @Override
-    public void addDeclaredPermissions(PermissionCollection declaredPc
-            ) throws SecurityException {
-
+    public void addDeclaredPermissions(PermissionCollection declaredPc) throws SecurityException {
         if (System.getSecurityManager() != null) {
-            System.getSecurityManager().checkSecurityAccess(
-                    DDPermissionsLoader.SET_EE_POLICY);
-
+            System.getSecurityManager().checkSecurityAccess(DDPermissionsLoader.SET_EE_POLICY);
             permissionsHolder.setDeclaredPermissions(declaredPc);
         }
-
     }
-
 
 
     @Override
     protected PermissionCollection getPermissions(CodeSource codeSource) {
-
-        PermissionCollection cachedPc =
-            permissionsHolder.getCachedPerms(codeSource);
-        if (cachedPc != null)
+        PermissionCollection cachedPc = permissionsHolder.getCachedPerms(codeSource);
+        if (cachedPc != null) {
             return cachedPc;
-
-        return permissionsHolder.getPermissions(
-                codeSource, super.getPermissions(codeSource));
+        }
+        return permissionsHolder.getPermissions(codeSource, super.getPermissions(codeSource));
     }
 
 
-
-    /** THREAD SAFETY: what happens when more than one thread requests the same class
-        and thus works on the same classData?  Or defines the same package?  Maybe
-        the same work just gets done twice, and that's all.
-        CAUTION: this method might be overriden, and subclasses must be cautious (also)
-        about thread safety.
+    /**
+     * THREAD SAFETY: what happens when more than one thread requests the same class
+     * and thus works on the same classData? Or defines the same package? Maybe
+     * the same work just gets done twice, and that's all.
+     * <p>
+     * CAUTION: this method might be overriden, and subclasses must be cautious (also)
+     * about thread safety.
      */
-    protected Class findClass(String name) throws ClassNotFoundException {
+    @Override
+    protected Class<?> findClass(String name) throws ClassNotFoundException {
         ClassData classData = findClassData(name);
         // Instruments the classes if the profiler's enabled
         if (PreprocessorUtil.isPreprocessorEnabled()) {
@@ -721,63 +683,60 @@ public class ASURLClassLoader
 
         // Define package information if necessary
         int lastPackageSep = name.lastIndexOf('.');
-        if ( lastPackageSep != -1 ) {
+        if (lastPackageSep != -1) {
             String packageName = name.substring(0, lastPackageSep);
-            if( getPackage(packageName) == null ) {
+            if (getDefinedPackage(packageName) == null) {
                 try {
 
                     // There's a small chance that one of our parents
                     // could define the same package after getPackage
                     // returns null but before we call definePackage,
                     // since the parent classloader instances
-                    // are not locked.  So, just catch the exception
+                    // are not locked. So, just catch the exception
                     // that is thrown in that case and ignore it.
                     //
                     // It's unclear where we would get the info to
                     // set all spec and impl data for the package,
-                    // so just use null.  This is consistent will the
+                    // so just use null. This is consistent will the
                     // JDK code that does the same.
-                    definePackage(packageName, null, null, null,
-                                  null, null, null, null);
-                } catch(IllegalArgumentException iae) {
+                    definePackage(packageName, null, null, null, null, null, null, null);
+                } catch (IllegalArgumentException iae) {
                     // duplicate attempt to define same package.
                     // safe to ignore.
-                    _logger.log(Level.FINE, "duplicate package " +
-                        "definition attempt for " + packageName, iae);
+                    _logger.log(Level.FINE, "duplicate package " + "definition attempt for " + packageName, iae);
                 }
             }
         }
 
         // Loop though the transformers here!!
         try {
+            @SuppressWarnings("unchecked")
             final ArrayList<ClassFileTransformer> xformers = (ArrayList<ClassFileTransformer>) transformers.clone();
-            for ( final ClassFileTransformer transformer : xformers) {
-
+            for (final ClassFileTransformer transformer : xformers) {
                 // see javadocs of transform().
                 // It expects class name as java/lang/Object
                 // as opposed to java.lang.Object
                 final String internalClassName = name.replace('.','/');
                 final byte[] transformedBytes = transformer.transform(this, internalClassName, null,
-                        classData.pd, classData.getClassBytes());
-                if(transformedBytes!=null){ // null indicates no transformation
-                    _logger.log(Level.INFO, CULoggerInfo.actuallyTransformed, name);
+                    classData.pd, classData.getClassBytes());
+                if (transformedBytes != null) { // null indicates no transformation
+                    _logger.log(INFO, CULoggerInfo.actuallyTransformed, name);
                     classData.setClassBytes(transformedBytes);
                 }
             }
         } catch (IllegalClassFormatException icfEx) {
             throw new ClassNotFoundException(icfEx.toString(), icfEx);
         }
-        Class clazz = null;
         try {
             byte[] bytes = classData.getClassBytes();
-            clazz = defineClass(name, bytes, 0, bytes.length, classData.pd);
+            Class<?> clazz = defineClass(name, bytes, 0, bytes.length, classData.pd);
             return clazz;
         } catch (UnsupportedClassVersionError ucve) {
-             throw new UnsupportedClassVersionError(
-                 sm.getString("ejbClassLoader.unsupportedVersion", name,
-                              System.getProperty("java.version")));
+            throw new UnsupportedClassVersionError(
+                sm.getString("ejbClassLoader.unsupportedVersion", name, System.getProperty("java.version")));
         }
     }
+
 
     /**
      * This method is responsible for locating the url from the class bytes
@@ -786,21 +745,18 @@ public class ASURLClassLoader
      * <p>
      * To preclude a race condition on checking 'doneCalled', as well as transient errors
      * if done() is called while running, this method is 'synchronized'.
-
+     *
      * @param name class name in java.lang.Object format
      * @return class bytes as well protection domain information
      * @throws ClassNotFoundException
      */
     protected synchronized ClassData findClassData(String name) throws ClassNotFoundException {
-
-        if( doneCalled ) {
-            _logger.log(Level.WARNING,
-                    CULoggerInfo.getString(CULoggerInfo.findClassAfterDone, name, this.toString()),
-                    new Throwable());
-            throw new ClassNotFoundException(name);
+        if (doneCalled) {
+            ClassNotFoundException exception = new ClassNotFoundException(name);
+            _logger.log(Level.WARNING, CULoggerInfo.getString(CULoggerInfo.findClassAfterDone, name, this), exception);
+            throw exception;
         }
-
-        String nf = (String) notFoundClasses.get(name);
+        String nf = notFoundClasses.get(name);
         if (nf != null && nf.equals(name) ) {
             throw new ClassNotFoundException(name);
         }
@@ -812,37 +768,33 @@ public class ASURLClassLoader
             if (!u.hasItem(entryName)) {
                 continue;
             }
-
             byte[] result = loadClassData0(u, entryName);
             if (result != null) {
-                if (System.getSecurityManager() == null)
+                if (System.getSecurityManager() == null) {
                     return new ClassData(result, u.pd);
-                else {
-                    //recreate the pd to include the declared permissions
-                    CodeSource cs = u.pd.getCodeSource();
-                    PermissionCollection pc = this.getPermissions(cs);
-                    ProtectionDomain pdWithPemissions =
-                        new ProtectionDomain(u.pd.getCodeSource(), pc, u.pd.getClassLoader(), u.pd.getPrincipals());
-                    return new ClassData(result, pdWithPemissions);
                 }
+                //recreate the pd to include the declared permissions
+                CodeSource cs = u.pd.getCodeSource();
+                PermissionCollection pc = this.getPermissions(cs);
+                ProtectionDomain pdWithPemissions =
+                    new ProtectionDomain(u.pd.getCodeSource(), pc, u.pd.getClassLoader(), u.pd.getPrincipals());
+                return new ClassData(result, pdWithPemissions);
             }
         }
 
         // add to the not found classes list
         notFoundClasses.put(name, name);
-
         throw new ClassNotFoundException(name);
     }
+
 
     /**
      * Returns the byte array from the given input stream.
      *
-     * @param    istream    input stream to the class or resource
-     *
-     * @throws   IOException  if an i/o error
+     * @param istream input stream to the class or resource
+     * @throws IOException if an i/o error
      */
     private byte[] getClassData(InputStream istream) throws IOException {
-
         BufferedInputStream bstream = new BufferedInputStream(istream);
         byte[] buf = new byte[4096];
         ByteArrayOutputStream bout = new ByteArrayOutputStream();
@@ -852,13 +804,11 @@ public class ASURLClassLoader
                 bout.write(buf, 0, num);
             }
         } finally {
-            if (bstream != null) {
-                try {
-                    bstream.close();
-                } catch (IOException closeIOE) {
-                    ASURLClassLoader._logger.log(Level.INFO,
-                            CULoggerInfo.exceptionInASURLClassLoader, closeIOE);
-                }
+            try {
+                bstream.close();
+            } catch (IOException closeIOE) {
+                ASURLClassLoader._logger.log(INFO,
+                        CULoggerInfo.exceptionInASURLClassLoader, closeIOE);
             }
         }
 
@@ -870,49 +820,45 @@ public class ASURLClassLoader
         return "ASURLClassLoader";
     }
 
+
     /**
-     * Returns a string representation of this class loader.
-     *
-     * @return   a string representation of this class loader
+     * Returns a string representation of this class loader
      */
+    @Override
     public String toString() {
-
-        StringBuffer buffer = new StringBuffer();
-
-        buffer.append(getClassLoaderName() + " : \n");
-        if( doneCalled ) {
-            buffer.append("doneCalled = true" + "\n");
-            String snapshot = doneSnapshot; // MUST use temp for thread safety; could go null after checking
-            if( snapshot != null ) {
-                buffer.append("doneSnapshot = " + snapshot);
-            }
+        StringBuilder buffer = new StringBuilder();
+        buffer.append(getClassLoaderName()).append(" :\n");
+        if (doneCalled) {
+            buffer.append("doneCalled = true").append('\n');
+            buffer.append("doneSnapshot = ").append(doneSnapshot);
         } else {
-            buffer.append("urlSet = " + this.urlSet + "\n");
-            buffer.append("doneCalled = false " + "\n");
+            buffer.append("urlSet = ").append(this.urlSet).append('\n');
+            buffer.append("doneCalled = false").append('\n');
         }
-        buffer.append(" Parent -> " + getParent() + "\n");
-
+        buffer.append(" Parent -> ").append(getParent()).append('\n');
         return buffer.toString();
     }
 
+
+    @Override
     public InputStream getResourceAsStream(final String name) {
         InputStream stream = super.getResourceAsStream(name);
-        /*
-         *Make sure not to wrap the stream if it already is a wrapper.
-         */
+        // Make sure not to wrap the stream if it already is a wrapper.
         if (stream != null) {
-            if (! (stream instanceof SentinelInputStream)) {
+            if (!(stream instanceof SentinelInputStream)) {
                 stream = new SentinelInputStream(stream);
             }
         }
         return stream;
     }
 
+
     @Override
     public Enumeration<URL> getResources(String name) throws IOException {
         final ResourceLocator locator = new ResourceLocator(this, getParentClassLoader(), true);
         return locator.getResources(name);
     }
+
 
     private ClassLoader getParentClassLoader() {
         final ClassLoader parent = getParent();
@@ -921,6 +867,40 @@ public class ASURLClassLoader
         }
         return parent;
     }
+
+
+    /**
+     * Returns the vector of open streams; creates it if needed.
+     *
+     * @return Vector<SentinelInputStream> holding open streams
+     */
+    private Vector<SentinelInputStream> getStreams() {
+        return streams;
+    }
+
+
+    /**
+     * Closes any streams that remain open, logging a warning for each.
+     * <p>
+     * This method should be invoked when the loader will no longer be used
+     * and the app will no longer explicitly close any streams it may have opened.
+     * Must be synchnronized to (a) avoid race condition checking 'streams'.
+     */
+    private synchronized void closeOpenStreams() {
+        if (streams == null) {
+            return;
+        }
+        SentinelInputStream[] toClose = streams.toArray(new SentinelInputStream[streams.size()]);
+        for (SentinelInputStream s : toClose) {
+            try {
+                s.closeWithWarning();
+            } catch (IOException ioe) {
+                _logger.log(Level.WARNING, CULoggerInfo.exceptionClosingStream, ioe);
+            }
+        }
+        streams.clear();
+    }
+
 
     /**
      * The JarFile objects loaded in the classloader may get exposed to the
@@ -961,6 +941,7 @@ public class ASURLClassLoader
          * 6. java.util.zip.ZipFile.close()
          * I
          */
+        @Override
         public void close() {
             // do nothing
         }
@@ -977,6 +958,7 @@ public class ASURLClassLoader
         /**
          * @see java.lang.Object#finalize()
          */
+        @Override
         @Deprecated(since = "6.1.0", forRemoval = true)
         protected void finalize() throws IOException {
             try {
@@ -992,26 +974,35 @@ public class ASURLClassLoader
      * URL entry - keeps track of the url resources.
      */
     protected static final class URLEntry {
+
         /** the url, ensure thread visibility by making it 'final' */
         final URL source;
 
-        /** file of the url,
-            ensure thread visibility by making it 'volatile' */
-        volatile File file       = null;
+        /**
+         * file of the url,
+         * ensure thread visibility by making it 'volatile'
+         */
+        volatile File file = null;
 
-        /** jar file if url is a jar else null,
-            ensure thread visibility by making it 'volatile'  */
-        volatile ProtectedJarFile zip     = null;
+        /**
+         * jar file if url is a jar else null,
+         * ensure thread visibility by making it 'volatile'
+         */
+        volatile ProtectedJarFile zip = null;
 
-        /** true if url is a jar,
-            ensure thread visibility by making it 'volatile'  */
-        volatile boolean isJar  = false;
+        /**
+         * true if url is a jar,
+         * ensure thread visibility by making it 'volatile'
+         */
+        volatile boolean isJar = false;
 
-        /** ensure thread visibility by making it 'volatile'  */
-        volatile Hashtable<String,String> table = null;
+        /** ensure thread visibility by making it 'volatile' */
+        volatile Hashtable<String, String> table = null;
 
-        /** ProtectionDomain with signers if jar is signed,
-            ensure thread visibility by making it 'volatile'  */
+        /**
+         * ProtectionDomain with signers if jar is signed,
+         * ensure thread visibility by making it 'volatile'
+         */
         volatile ProtectionDomain pd = null;
 
         URLEntry(URL url) throws IOException {
@@ -1019,17 +1010,17 @@ public class ASURLClassLoader
             init();
         }
 
+
         void init() throws IOException {
             try {
-                file    = new File(source.toURI());
-                isJar  = file.isFile();
+                file = new File(source.toURI());
+                isJar = file.isFile();
 
                 if (isJar) {
                     zip = new ProtectedJarFile(file);
                 }
 
-                table = new Hashtable<String,String>();
-//                cacheItems();
+                table = new Hashtable<>();
             } catch (URISyntaxException use) {
                 IOException ioe= new IOException();
                 ioe.initCause(use);
@@ -1038,12 +1029,10 @@ public class ASURLClassLoader
         }
 
         private void fillTable(File f, Hashtable t, String parent) throws IOException {
-
-            String localName = (parent.equals("")) ? "" : parent + "/";
-
+            String localName = parent.isEmpty() ? "" : parent + "/";
             File[] children = f.listFiles();
-            for (int i = 0; i < children.length; i++) {
-                processFile(children[i],  t, localName);
+            for (File child : children) {
+                processFile(child,  t, localName);
             }
         }
 
@@ -1131,6 +1120,7 @@ public class ASURLClassLoader
              */
             try {
                 File result = (File) AccessController.doPrivileged(new PrivilegedExceptionAction() {
+                        @Override
                         public Object run() throws Exception {
 
                             File targetFile = new File(file, targetPath);
@@ -1165,8 +1155,9 @@ public class ASURLClassLoader
              }
          }
 
+        @Override
         public String toString() {
-            return "URLEntry : " + source.toString();
+            return "URLEntry : " + source;
         }
 
         /**
@@ -1175,73 +1166,42 @@ public class ASURLClassLoader
          * @param  obj   URLEntry to compare against
          * @return       true if both entry has equal URL
          */
+        @Override
         public boolean equals(Object obj) {
-
-            boolean tf = false;
-
             if (obj instanceof URLEntry) {
                 URLEntry e = (URLEntry) obj;
                 try {
-                              //try comparing URIs
-                              if (source.toURI().equals(e.source.toURI())) {
-                                  tf = true;
-                              }
-                          } catch (URISyntaxException e1) {
+                    // try comparing URIs
+                    if (source.toURI().equals(e.source.toURI())) {
+                        return true;
+                    }
+                } catch (URISyntaxException e1) {
                     // We should never get here, because we call init() in the constructor and
-                    // init() would have thrown an exception if the URL could not be converted to a valid URI.
-                    assert(false);
+                    // init() would have thrown an exception if the URL could not be converted to a
+                    // valid URI.
                     throw new RuntimeException(e1);
                 }
             }
-
-            return tf;
+            return false;
         }
 
         /**
          * Since equals is overridden, we need to override hashCode as well.
          */
+        @Override
         public int hashCode() {
             try {
-                          return source.toURI().hashCode();
-                      } catch (URISyntaxException e) {
+                return source.toURI().hashCode();
+            } catch (URISyntaxException e) {
                 // We should never get here, because we call init() in the constructor and
-                // init() would have thrown an exception if the URL could not be converted to a valid URI.
-                assert(false);
+                // init() would have thrown an exception if the URL could not be converted to a
+                // valid URI.
                 throw new RuntimeException(e);
             }
         }
 
     }
 
-    /**
-     *Returns the vector of open streams; creates it if needed.
-     *@return Vector<SentinelInputStream> holding open streams
-     */
-    private Vector<SentinelInputStream> getStreams() {
-        return streams;
-    }
-
-    /**
-     *Closes any streams that remain open, logging a warning for each.
-     *<p>
-     *This method should be invoked when the loader will no longer be used
-     *and the app will no longer explicitly close any streams it may have opened.
-     * Must be synchnronized to (a) avoid race condition checking 'streams'.
-     */
-    private synchronized void closeOpenStreams() {
-        if (streams != null) {
-
-            SentinelInputStream[] toClose = streams.toArray(new SentinelInputStream[streams.size()]);
-            for (SentinelInputStream s : toClose) {
-                try {
-                    s.closeWithWarning();
-                } catch (IOException ioe) {
-                    _logger.log(Level.WARNING, CULoggerInfo.exceptionClosingStream, ioe);
-                }
-            }
-            streams.clear();
-        }
-    }
 
     /**
      * Wraps all InputStreams returned by this class loader to report when
@@ -1270,6 +1230,7 @@ public class ASURLClassLoader
         /**
          * Closes underlying input stream.
          */
+        @Override
         public void close() throws IOException {
             _close();
         }
@@ -1281,13 +1242,13 @@ public class ASURLClassLoader
          * 'closed' is 'volatile', but it's a race condition to check it and how this code
          * relates to _close() is unclear.
          */
+        @Override
         protected void finalize() throws Throwable {
-            if (!closed && this.in != null){
+            if (!closed && this.in != null) {
                 try {
                     in.close();
-                }
-                catch (IOException ignored){
-                    //Cannot do anything here.
+                } catch (IOException ignored) {
+                    // Cannot do anything here.
                 }
                 //Well, give them a stack trace!
                 report();
@@ -1296,11 +1257,10 @@ public class ASURLClassLoader
         }
 
         private synchronized void _close() throws IOException {
-            if ( closed ) {
+            if (closed) {
                 return;
             }
             // race condition with above check, but should have no harmful effects
-
             closed = true;
             getStreams().remove(this);
             super.close();
@@ -1318,6 +1278,8 @@ public class ASURLClassLoader
             _logger.log(Level.WARNING, CULoggerInfo.inputStreamFinalized, this.throwable);
         }
     }
+
+
     /**
      * To properly close streams obtained through URL.getResource().getStream():
      * this opens the input stream on a JarFile that is already open as part
@@ -1347,6 +1309,7 @@ public class ASURLClassLoader
         /**
          * @see java.net.JarURLConnection#getJarFile()
          */
+        @Override
         public JarFile getJarFile() throws IOException {
             return mRes.zip;
         }
@@ -1354,6 +1317,7 @@ public class ASURLClassLoader
         /**
          * @see java.net.URLConnection#connect()
          */
+        @Override
         public void connect() throws IOException {
             // Nothing
         }
@@ -1361,10 +1325,11 @@ public class ASURLClassLoader
         /**
          * @see java.net.URLConnection#getInputStream()
          */
+        @Override
         public InputStream getInputStream() throws IOException {
             // When there is no entry name specified (this can happen for url like jar:file:///tmp/foo.jar!/),
             // we must throw an IOException as that's the behavior of JarURLConnection as well.
-            if ("".equals(mName)) {
+            if (mName == null || mName.isEmpty()) {
                 throw new IOException("no entry name specified");
             }
             ZipEntry entry = mRes.zip.getEntry(mName);
@@ -1386,7 +1351,7 @@ public class ASURLClassLoader
      */
     private class InternalURLStreamHandler extends URLStreamHandler {
         /** must be 'volatile' for thread visibility */
-        private volatile URL   mURL;
+        private volatile URL mURL;
         private final URLEntry mRes;
 
         /**
@@ -1402,17 +1367,17 @@ public class ASURLClassLoader
         /**
          * @see java.net.URLStreamHandler#openConnection(java.net.URL)
          */
+        @Override
         protected URLConnection openConnection(final URL u) throws IOException {
             String path = u.getPath();
             int separator = path.lastIndexOf('!');
-            assert(separator != -1); // we deal with jar urls only
+            assert (separator != -1); // we deal with jar urls only
             try {
                 URI jarFileURI = new URI(path.substring(0, separator));
                 if (!jarFileURI.equals(mRes.file.toURI())) {
-                    throw new IOException("Cannot open a foreign URL; this.url=" + mURL
-                        + "; foreign.url=" + u);
+                    throw new IOException("Cannot open a foreign URL; this.url=" + mURL + "; foreign.url=" + u);
                 }
-                String entryName = path.substring(separator+1);
+                String entryName = path.substring(separator + 1);
                 if (entryName != null) {
                     assert (entryName.startsWith("/"));
                     entryName = entryName.substring(1);
@@ -1423,6 +1388,7 @@ public class ASURLClassLoader
             }
         }
 
+
         /**
          * Ties the URL that this handler is associated with to the handler, so
          * that it can be asserted that somehow no other URLs are mangled in (this
@@ -1432,9 +1398,8 @@ public class ASURLClassLoader
          */
         public void tieUrl(URL url) {
             // is it OK to call this twice and whack the variable a second time?
-            if ( mURL != null )
-            {
-                throw new IllegalStateException("Setting the URL more than once not allowed" );
+            if (mURL != null) {
+                throw new IllegalStateException("Setting the URL more than once not allowed");
             }
             mURL = url;
         }
@@ -1505,13 +1470,14 @@ public class ASURLClassLoader
          * This method uses the delegate to use class bytes and then defines
          * the class using this class loader
          */
-        protected Class findClass(String name) throws ClassNotFoundException {
+        @Override
+        protected Class<?> findClass(String name) throws ClassNotFoundException {
             ClassData classData = delegate.findClassData(name);
             // Define package information if necessary
             int lastPackageSep = name.lastIndexOf('.');
-            if ( lastPackageSep != -1 ) {
+            if (lastPackageSep != -1) {
                 String packageName = name.substring(0, lastPackageSep);
-                if( getPackage(packageName) == null ) {
+                if (getDefinedPackage(packageName) == null) {
                     try {
                         // There's a small chance that one of our parents
                         // could define the same package after getPackage
@@ -1524,32 +1490,32 @@ public class ASURLClassLoader
                         // set all spec and impl data for the package,
                         // so just use null.  This is consistent will the
                         // JDK code that does the same.
-                        definePackage(packageName, null, null, null,
-                                      null, null, null, null);
-                    } catch(IllegalArgumentException iae) {
+                        definePackage(packageName, null, null, null, null, null, null, null);
+                    } catch (IllegalArgumentException iae) {
                         // duplicate attempt to define same package.
                         // safe to ignore.
-                        _logger.log(Level.FINE, "duplicate package " +
-                            "definition attempt for " + packageName, iae);
+                        _logger.log(Level.FINE, "duplicate package definition attempt for " + packageName, iae);
                     }
                 }
             }
-            Class clazz = null;
             try {
                 final byte[] bytes = classData.getClassBytes();
-                clazz = defineClass(name, bytes, 0, bytes.length, classData.pd);
+                Class<?> clazz = defineClass(name, bytes, 0, bytes.length, classData.pd);
                 return clazz;
             } catch (UnsupportedClassVersionError ucve) {
-                 throw new UnsupportedClassVersionError(
-                     sm.getString("ejbClassLoader.unsupportedVersion", name,
-                                  System.getProperty("java.version")));
+                throw new UnsupportedClassVersionError(
+                    sm.getString("ejbClassLoader.unsupportedVersion", name, System.getProperty("java.version")));
             }
         }
 
+
+        @Override
         protected URL findResource(String name) {
             return delegate.findResource(name);
         }
 
+
+        @Override
         protected Enumeration<URL> findResources(String name) throws IOException {
             return delegate.findResources(name);
         }
